<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/bike"/>

        <!-- Nombre -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/CCNombre"
            android:hint="@string/Nombre"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <!-- Apellido-->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/CCApellido"
            android:hint="@string/Apellido"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <!-- F D N -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/CCFDN"
            android:hint="@string/Edad"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="number"/>

        <!--
        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/CrearCuentaFechaNac">

        </DatePicker>
        -->

        <!-- Email -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/CCEmail"
            android:hint="@string/Correo"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="textEmailAddress"/>

        <!-- Password -->
        <EditText
            android:id="@+id/CCPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Contrasena"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="textPassword"/>
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerTipoUsuario"
            android:entries="@array/tipo_usuario">
        </android.support.v7.widget.AppCompatSpinner>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnConfirmCrear"
            android:text="@string/CrearCuenta"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancelarCrear"
            android:text="@string/Cancelar"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:gravity="center"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>
