<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.carlos.biketrip.CrearPuntoEmpresa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:id="@+id/ivImagenPunto"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="100dp"
            />

        <!-- Nombre -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PuntoNombre"
            android:hint="@string/Nombre"
            android:inputType="text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <!-- Telefono-->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PuntoTelefono"
            android:hint="@string/Telefono"
            android:inputType="number"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/PuntoLongitud"
                android:hint="@string/Longitud"
                android:inputType="number"
                android:layout_weight="0.5"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/PuntoLatitud"
                android:hint="@string/Latitud"
                android:inputType="number"
                android:layout_weight="0.5"/>

        </LinearLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerDuracionPunto"
            android:entries="@array/duracionPunto"
            android:layout_margin="8dp">
        </Spinner>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnCamaraPunto"
                android:text="@string/CamaraPunto"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnGaleriaPunto"
                android:text="@string/GaleriaPunto"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:gravity="center"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnConfirmarPunto"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/CrearPunto" />


    </LinearLayout>

</ScrollView>
