<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/PerfilPersonalCover"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:scaleType="centerCrop"
            android:src="@drawable/greybackground"/>

        <ImageView
            android:id="@+id/PerfilFoto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/PerfilPersonalCover"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-60dp"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bike_icon"
            android:background="@drawable/profile_circular_border_imageview"/>

        <RelativeLayout
            android:id="@+id/PerfilLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PerfilPersonalCover"
            android:elevation="4dp"
            android:paddingBottom="24dp">


            <ImageButton
                android:id="@+id/ibtnEditarPerfil"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/editarlapiz"
                android:layout_alignParentRight="true"/>

            <TextView
                android:id="@+id/PerfilPersonalNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:text="@string/EjemploNombre2"
                android:textSize="24dp"/>

            <TextView
                android:id="@+id/PerfilPersonalBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/PerfilPersonalNombre"
                android:layout_marginTop="12dp"
                android:text="@string/EjemploDescripcion2"
                android:textSize="14sp"
                android:textAlignment="center"/>



            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_below="@+id/PerfilPersonalBio">

                <TextView
                    android:id="@+id/PerfilPersonalFecha"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/Edad"
                    android:textAlignment="center"
                    />

                <TextView
                    android:id="@+id/PerfilPersonalCorreo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/EjemploCorreo2"
                    android:textAlignment="center"/>



            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>






</ScrollView>
