<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/PerfilCoverImage"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bikecover"/>
            <!--android:src -->

        <ImageView
            android:id="@+id/PerfilFoto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/PerfilCoverImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-60dp"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/real_madrid"
            android:background="@drawable/profile_circular_border_imageview"/>

        <RelativeLayout
            android:id="@+id/PerfilLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PerfilCoverImage"
            android:elevation="4dp"
            android:paddingBottom="24dp">


            <ImageButton
                android:id="@+id/ibtnMsg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/mensaje"
                android:layout_alignParentLeft="true"/>

            <ImageButton
                android:id="@+id/ibtnAddF"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/add_friend"
                android:layout_toLeftOf="@+id/ibtnDelF"/>

            <ImageButton
                android:id="@+id/ibtnDelF"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/delete_friend"
                android:layout_alignParentRight="true"/>

            <TextView
                android:id="@+id/PerfilNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:text="@string/EjemploNombre"
                android:textSize="24dp"/>

            <TextView
                android:id="@+id/PerfilBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/PerfilNombre"
                android:layout_marginTop="12dp"
                android:text="@string/EjemploDescripcion"
                android:textSize="14sp"
                android:textAlignment="center"/>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:layout_below="@+id/PerfilBio">

            <TextView
                android:id="@+id/PerfilFecha"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Edad"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/PerfilCorreo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/EjemploCorreo"
                android:textAlignment="center"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
