<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/appbar_padding_top">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </TextView>

    <ScrollView
        android:id="@+id/scrollNotificaciones"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iwb2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/bike2"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <TextView
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:text="@string/EjemploNotificacion"/>

                        <TextView
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:text=""/>

                        <TextView
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:text="@string/EjemploHora"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Hace"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/ibtnVerNot"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:src="@drawable/play_icon" />

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="50dp"
                        android:text=""/>

                    <ImageButton
                        android:id="@+id/ibtnEliminar"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:src="@drawable/delete_icon"/>


                </LinearLayout>



            </LinearLayout>



        </LinearLayout>




    </ScrollView>
</LinearLayout>